v8/tests/messages/non-ident-catch.out
non-ident-catch.js:3: Uncaught SyntaxError: Unexpected string
} catch ("foo" "bar") {
         ^^^^^
